Changed queries to paths in URL
