# docs/swagger.json
@@ -161,33 +161,6 @@
                         "description": "OK"
                     }
                 }
-            },
-            "delete": {
-                "description": "Удалить категорию",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Categories"
-                ],
-                "summary": "Delete Category",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Id категории",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
             }
         },
         "/api/Categories/GetCategoriesForAdmin": {
@@ -247,7 +220,36 @@
                 }
             }
         },
-        "/api/FavoriteReports/AddReport": {
+        "/api/Categories/{categoryId}": {
+            "delete": {
+                "description": "Удалить категорию",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Delete Category",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Id категории",
+                        "name": "categoryId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/FavoriteReports/AddReport/{reportId}": {
             "post": {
                 "description": "Add a report to favorites by report ID",
                 "produces": [
@@ -262,7 +264,7 @@
                         "type": "integer",
                         "description": "Report ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -273,7 +275,7 @@
                 }
             }
         },
-        "/api/FavoriteReports/DeleteReport": {
+        "/api/FavoriteReports/DeleteReport/{reportId}": {
             "delete": {
                 "description": "Remove a report from favorites by report ID",
                 "produces": [
@@ -287,8 +289,8 @@
                     {
                         "type": "integer",
                         "description": "Report ID",
-                        "name": "id",
-                        "in": "query",
+                        "name": "reportId",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -407,48 +409,9 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Remove a report from a category",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reports"
-                ],
-                "summary": "Remove a report",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Report ID",
-                        "name": "reportId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": "Category ID",
-                        "name": "categoryId",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         },
-        "/api/Reports/AddReportRelation": {
+        "/api/Reports/AddReportRelation/{reportId}": {
             "post": {
                 "description": "Add a report to a category",
                 "consumes": [
@@ -466,7 +429,7 @@
                         "type": "integer",
                         "description": "Report ID",
                         "name": "reportId",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -510,6 +473,47 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.UpdateCategoryParent"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/Reports/{reportId}": {
+            "delete": {
+                "description": "Remove a report from a category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Remove a report",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Report ID",
+                        "name": "reportId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Category ID",
+                        "name": "categoryId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
                         }
                     }
                 ],
